# neigh-ai

./: .dockerignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  pyproject.toml  tox.ini
.github/workflows/: main.yml
neigh_ai/: constants.py
neigh_ai/dashboard/: app.py  scorecard.py
neigh_ai/dashboard/pages/: race.py  scorecard.py
neigh_ai/feature_extraction/: hip_sheet.py  power_curve.py
tests/: conftest.py  test_foo.py
tests/assets/: hip_sheet.csv
tests/test_dashboard/test_race/: test_race.py
tests/test_dashboard/test_scorecard/: test_family_tree.py  test_performance_score.py  test_races_table.py  test_scorecard.py  test_utils.py
tests/test_feature_extraction/: test_hip_sheet.py
tests/test_scorecard/: test_display_horse.py  test_family_tree.py  test_generate_scores.py  test_performance_graph.py  test_performance_score.py  test_races_table.py  test_scorecard.py  test_serve_image.py  test_sync_dropdown.py  test_update_options.py  test_utils.py
