[tool.poetry]
name = "neigh_ai"
version = "0.0.1"
description = "This repo helps buy winning horses"
authors = ["Hayden Sather <hrsather@proton.me>"]
repository = "https://github.com/hrsather/neigh-i"
documentation = "https://hrsather.github.io/neigh-i/"
readme = "README.md"
packages = [
  {include = "neigh_ai"}
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dash = "^3.2.0"
rapidfuzz = "^3.13.0"
plotly = {extras = ["express"], version = "^6.3.0"}
pandas = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyright = "^1.1.382"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pyright]
include = ["neigh_ai"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["neigh_ai"]
