[project]
version = "0.0.1"
description = "This repo helps buy winning horses"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Hayden Sather", email = "hrsather@proton.me" }
]
urls = { repository = "https://github.com/hrsather/neigh-ai", documentation = "https://hrsather.github.io/neigh-ai/" }
dependencies = [
  "dash>=3.2.0,<4.0.0",
  "rapidfuzz>=3.13.0,<4.0.0",
  "plotly[express]>=6.3.0,<7.0.0",
  "pandas>=2.3.2,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0,<8.0.0",
  "pytest-cov>=4.0.0,<5.0.0",
  "pyright>=1.1.382,<2.0.0",
  "pre-commit>=3.4.0,<4.0.0",
  "tox>=4.11.1,<5.0.0"
]

[tool.poetry]
name = "neigh_ai"
packages = [{ include = "neigh_ai" }]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["neigh_ai"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY"
]
ignore = ["E501", "E731"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["neigh_ai"]
